# 2024-EveryVoter-A-Team

./: .gitignore  README.md  app.py  application.py  election_service.py  main.py  practice.py  pyproject.toml  register_routes.py  requirements.txt  run.py  run_tests.py  startup.txt  test_connect.py  test_db.py  wsgi.py  zzregister_routes.py
.github/workflows/: jerrod_azure_00_everyvoter.yml  jerrod_azure_04_everyvoter.yml
controllers/: __init__.py  admin_controller.py  auth_controller.py  election_controller.py  vote_controller.py
exercises/: primary-sql-flask-db-exercise.py  pyodbc_connect.py  sqlalchemy_db_connect.py
migrations/versions/: 1454d350ca40_update_election_table_to_include_.py  5560acda1258_initial_migration.py  6a4e42044d6d_integration_testing_broke_the_database_.py  95d2fc038455_timezone_awarenss.py  d97c689b9834_increase_password_hash_size.py  e8b1de8b3ab0_add_election_date_range.py  f380fa2622c2_initial_migration.py  fe5a028496d2_models_added_for_user_login_and_sign_in_.py
models/: __init__.py  base.py  candidate.py  election.py  election_state.py  models.py  user.py  vote.py
static/: scripts.js  shooting-stars.js  styles.css  voice.js
templates/: admin.html  base.html  choose_category.html  create_election.html  custom_election.html  index.html  login.html  register.html  restaurant_election.html  results.html  vote.html
templates/partials/: back_button.html  (+5 more)
tests/: test_ApplicationStartupTestCases.py  test_AudioGenerationTestCases.py  test_AudioProcessingTestCases.py  test_Integration.py  test_unit.py  test_voice_vote.py  tests_app.py
