[tool.poetry]
name = "everyvoter-a-team"
version = "0.1.0"
description = "A voting application using Flask, CSS Bootstrap, Azure, and LangChain"
authors = ["Jerrod Estell <jrodmath1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
Flask = "^3.0.3"
langchain = "^0.2.15"
langchain-openai = "^0.1.23"
Flask-SQLAlchemy = "^3.1.1"
python-dotenv = "^1.0.1"
psycopg2-binary = "^2.9.9"
sqlalchemy = "^2.0.33"
flask-babel = "^4.0.0"
openai = "^1.44.0"
string-similarity = "^0.0.2"
elevenlabs = "^1.8.0"
pyodbc = "^5.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
